<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">"Binge List"</string>

    <!-- Menu Strings -->
    <string name="sort">Sort By</string>
    <string name="view">View Type</string>
    <string name="card">Card</string>
    <string name="compact">Compact Card</string>
    <string name="list">List</string>
    <string name="theme">Theme</string>
    <string name="day_theme">Light (day)</string>
    <string name="night_theme">Dark (night)</string>
    <string name="settings">Settings</string>

    <!-- Preferences Strings -->
    <string name="recyclerview_view_type_preference">recyclerViewType</string>
    <string name="theme_preference">themePreference</string>
    <string name="movie_sort">movieSort</string>
    <string name="show_sort">showSort</string>

    <!-- API Strings -->
    <string name="image_base_url">https://image.tmdb.org/t/p/</string>
    <string name="movie_base_url">http://api.themoviedb.org/3/movie/</string>
    <string name="tv_show_base_url">http://api.themoviedb.org/3/tv/</string>
    <string name="imdb_person_base_url">http://www.imdb.com/title/</string>
    <string name="netflix_base_url">https://www.netflix.com/watch/</string>


    <!-- UI Strings -->
    <string name="overview_title">Overview</string>
    <string name="plot_title">Plot</string>
    <string name="cast_title">Cast</string>
    <string name="crew_title">Crew</string>
    <string name="rating_header">User Rating</string>
    <string name="runtime_header">Runtime</string>
    <string name="genre_header">Genres</string>
    <string name="name_header">Name</string>
    <string name="streaming_header">Streaming</string>
    <string name="biography_header">Biography</string>
    <string name="born_header">Born</string>
    <string name="mpaa_header">Rating</string>
    <string name="died_header">Died</string>
    <string name="known_for_header">Credits</string>
    <string name="similar_movies_header">Similar Movies</string>
    <string name="see_more">See more</string>
    <string name="expand_collapse_description">ExpandCollapseArrow</string>
    <string name="movie_backdrop_description">MovieDetailBackdrop</string>

    <!-- intent data strings -->
    <string name="movieId">movieId</string>
    <string name="movieTitle">movieTitle</string>
    <string name="showId">showId</string>
    <string name="showTitle">showTitle</string>

    <!-- button image text -->
    <string name="add_to_watchlist_button">{gmd_add} add to watchlist!</string>
    <string name="watch_button">{gmd_done} watch!</string>
    <string name="watched_button">{gmd_playlist_add_check} watched!</string>
    <string name="imdb_button">{gmd_exit_to_app} IMDb</string>
    <string name="unwatch_button">{gmd_undo} Unwatch</string>
    <string name="remove_button"> {gmd_clear} Remove</string>
    <string name="your_shows_button">{cmd_television_guide} on your shows</string>
    <string name="add_to_your_shows_button"> {gmd_add} add to your shows!</string>

    <!-- Drawer Items -->
    <string name="drawer_item_show_header">TV Shows</string>
    <string name="drawer_item_movie_header">Movies</string>
    <string name="drawer_item_show_watchlist">Your Shows</string>
    <string name="drawer_item_show_browse">Browse</string>
    <string name="drawer_item_movie_watchlist">Watchlist</string>
    <string name="drawer_item_movie_browse">Browse</string>
    <string name="drawer_item_search">Search</string>
    <string name="drawer_item_stats">Stats</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_about">About</string>

    <!-- Image sizes for tmdb -->
    <string name="image_size_w92">w92</string>
    <string name="image_size_w154">w154</string>
    <string name="image_size_w185">w185</string>
    <string name="image_size_w300">w300</string>
    <string name="image_size_w342">w342</string>
    <string name="image_size_w345">w345</string>
    <string name="image_size_w500">w500</string>
    <string name="image_size_w780">w780</string>
    <string name="image_size_w1280">w1280</string>
    <string name="image_size_original">original</string>
    <string name="image_size_h632">h632</string>

    <string-array name="stats_array">
        <item>Time</item>
        <item>Progress</item>
    </string-array>

</resources>
