<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".viewControllers.activities.movies.WatchlistActivity"
    android:popupMenuStyle="?android:colorBackground">

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        app:showAsAction="always">

        <menu>
            <group android:id="@+id/movie_sort"
                android:checkableBehavior="single">

                <item android:id="@+id/alphabetical_sort"
                    android:title="Alphabetical">
                </item>

                <item android:id="@+id/date_added_sort"
                    android:title="Date Added">
                </item>

                <item android:id="@+id/rating_sort"
                    android:title="Rating">
                </item>

                <item android:id="@+id/runtime_sort"
                    android:title="Runtime">
                </item>


            </group>

        </menu>

    </item>

    <item
        android:id="@+id/action_theme"
        android:title="@string/theme"
        app:showAsAction="never">

        <menu>
            <group android:id="@+id/theme_group"
                android:checkableBehavior="single">

                <item android:id="@+id/light_theme"
                    android:title="@string/day_theme">
                </item>

                <item android:id="@+id/dark_theme"
                    android:title="@string/night_theme">
                </item>

            </group>

        </menu>

    </item>

    <item
        android:id="@+id/action_view"
        android:title="@string/view"
        app:showAsAction="never">

        <menu>
            <group android:id="@+id/view_group"
                android:checkableBehavior="single">

                <item android:id="@+id/card_view"
                    android:title="@string/card">
                </item>

                <item android:id="@+id/compact_view"
                    android:title="@string/compact">
                </item>

                <item android:id="@+id/list_view"
                    android:title="@string/list">
                </item>

            </group>

        </menu>

    </item>

</menu>