<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="?android:colorBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/more_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/md_keylines"
        android:paddingRight="@dimen/md_keylines"
        android:paddingTop="@dimen/md_keylines" >

        <TextView
            android:id="@+id/overview_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="?attr/colorAccent"
            android:text="@string/overview_title"
            android:textSize="@dimen/article_titles"
            android:layout_marginBottom="@dimen/md_keylines" />

        <TextView
            android:text="@string/rating_header"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorSecondary"
            android:paddingLeft="@dimen/md_keylines"
            android:paddingStart="@dimen/md_keylines"
            android:paddingRight="@dimen/md_keylines"
            android:paddingEnd="@dimen/md_keylines" />

        <RelativeLayout
            android:id="@+id/rating_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/md_keylines"
            android:paddingRight="@dimen/md_keylines" >

            <RatingBar
                android:isIndicator="true"
                style="?android:attr/ratingBarStyleSmall"
                android:id="@+id/rating"
                android:rating="0"
                android:stepSize="0.1"
                android:numStars="10"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" />

            <TextView
                android:id="@+id/user_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/rating"
                android:layout_toEndOf="@id/rating"
                android:layout_alignBaseline="@id/rating"
                android:textColor="?android:textColorTertiary"
                android:layout_marginBottom="@dimen/md_keylines"
                android:layout_marginLeft="@dimen/md_keylines"
                android:layout_marginStart="@dimen/md_keylines" />

        </RelativeLayout>

        <TextView
            android:text="@string/runtime_header"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorSecondary"
            android:paddingLeft="@dimen/md_keylines"
            android:paddingStart="@dimen/md_keylines"
            android:paddingRight="@dimen/md_keylines"
            android:paddingEnd="@dimen/md_keylines" />

        <TextView
            android:id="@+id/runtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorTertiary"
            android:layout_marginBottom="@dimen/md_keylines"
            android:paddingLeft="@dimen/md_keylines"
            android:paddingStart="@dimen/md_keylines"
            android:paddingRight="@dimen/md_keylines"
            android:paddingEnd="@dimen/md_keylines" />

        <TextView
            android:text="@string/genre_header"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorSecondary"
            android:paddingLeft="@dimen/md_keylines"
            android:paddingStart="@dimen/md_keylines"
            android:paddingRight="@dimen/md_keylines"
            android:paddingEnd="@dimen/md_keylines" />

        <TextView
            android:id="@+id/genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorTertiary"
            android:layout_marginBottom="@dimen/md_keylines"
            android:paddingLeft="@dimen/md_keylines"
            android:paddingStart="@dimen/md_keylines"
            android:paddingRight="@dimen/md_keylines"
            android:paddingEnd="@dimen/md_keylines" />

        <TextView
            android:text="@string/mpaa_header"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorSecondary"
            android:paddingLeft="@dimen/md_keylines"
            android:paddingStart="@dimen/md_keylines"
            android:paddingRight="@dimen/md_keylines"
            android:paddingEnd="@dimen/md_keylines" />

        <TextView
            android:id="@+id/mpaa_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorTertiary"
            android:paddingLeft="@dimen/md_keylines"
            android:paddingStart="@dimen/md_keylines"
            android:paddingRight="@dimen/md_keylines"
            android:paddingEnd="@dimen/md_keylines" />

        <com.mikepenz.iconics.view.IconicsButton
            android:id="@+id/imdb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imdb_button"
            android:textColor="?attr/colorPrimary"
            style="?android:attr/borderlessButtonStyle" />

        <TextView
            android:id="@+id/plot_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorAccent"
            android:text="@string/plot_title"
            android:textSize="@dimen/article_titles"
            android:layout_marginTop="@dimen/md_keylines"
            android:layout_marginBottom="@dimen/md_keylines" />

        <com.ms.square.android.expandabletextview.ExpandableTextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
            android:id="@+id/expand_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            expandableTextView:maxCollapsedLines="4"
            expandableTextView:animDuration="200" >

            <TextView
                android:paddingLeft="@dimen/md_keylines"
                android:paddingStart="@dimen/md_keylines"
                android:paddingRight="@dimen/md_keylines"
                android:paddingEnd="@dimen/md_keylines"
                android:textColor="?android:textColorTertiary"
                android:id="@id/expandable_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@id/expand_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:layout_gravity="end|bottom"
                android:contentDescription="@string/expand_collapse_description"
                android:background="@android:color/transparent" />

        </com.ms.square.android.expandabletextview.ExpandableTextView>

        <TextView
            android:id="@+id/cast_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorAccent"
            android:text="@string/cast_title"
            android:textSize="@dimen/article_titles"
            android:layout_marginBottom="@dimen/md_keylines" />

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/cast_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"/>
        </RelativeLayout>

        <Button
            android:id="@+id/see_more_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:textColor="@color/colorPrimary"
            style="?android:attr/borderlessButtonStyle"
            />

        <TextView
            android:id="@+id/crew_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorAccent"
            android:text="@string/crew_title"
            android:textSize="@dimen/article_titles"
            android:layout_marginBottom="@dimen/md_keylines"/>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/crew_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"/>
        </RelativeLayout>

        <Button
            android:id="@+id/see_more_crew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:textColor="@color/colorPrimary"
            style="?android:attr/borderlessButtonStyle"
            />

        <TextView
            android:id="@+id/similar_movies_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorAccent"
            android:text="@string/similar_movies_header"
            android:textSize="@dimen/article_titles"
            android:layout_marginBottom="@dimen/md_keylines" />

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/similar_movies_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"/>
        </RelativeLayout>

        <Button
            android:id="@+id/see_more_similar_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:textColor="@color/colorPrimary"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginBottom="@dimen/md_keylines"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>